LevelSelectScreen basic implementation.